<resources>
    <string name="app_name">TAREA03A</string>

    <string name="user">Enter your user</string>
    <string name="password">Enter your password</string>
    <string name="forgotten">Did you forgot your password?</string>
    <string name="lastIMC">Your last IMC: </string>
    <string name="lastHR">Your last HR: </string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="btnAccept">Accept</string>
    <string name="btnCancel">Cancel</string>
    <string name="home">Home</string>

    <string name="mainText">Your lasts tests: </string>
    <string name="txtIMC">Fill the form to check your imc</string>
    <string name="txtEdad">Age</string>
    <string name="txtPeso">Weight (in kilograms)</string>
    <string name="txtAltura">Height (in meters)</string>
    <string name="txtHombre">I\'m a male</string>
    <string name="txtMujer">I\'m a female</string>
    <string name="txtCalc">Calculate</string>
    <string name="imc">Your result is: </string>

    <string name="nameUser">User name: </string>
    <string name="passwordUser">Password: </string>
    <string name="genreUser">Genre : </string>
    <string name="squatsUser">No. squats : </string>
    <string name="pushUpsUser">No. push ups : </string>
    <string name="crunchesUser">No. crunches : </string>
    <string name="imcUser">Your imc : </string>
    <string name="hearRateUser">Your heart rate : </string>

    <string name="txtRojo">Red 0 – 255:  </string>
    <string name="txtVerde">Green 0 – 255:  </string>
    <string name="txtAzul">Blue 0 – 255:  </string>

    <string name="menu1">Change colors</string>
    <string name="menu3">Edit user</string>
    <string name="menu4">Change options</string>


    <string name="heartPres">Please fill the form to check how good your heart rate is</string>
    <string name="heartPulses">Number of pulses in 15 seconds</string>
    <string name="drawerHeader">Select new checkups</string>
    <string name="drawer1">Check your heart rate</string>
    <string name="drawer2">Check your body strength</string>
    <string name="drawer3">Check your IMC </string>


</resources>
