<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">

    <!--Name -->



    <TextView
        android:id="@+id/txtNameUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="56dp"
        android:text="@string/nameUser"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout7"
        android:layout_width="204dp"
        android:layout_height="29dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toEndOf="@+id/txtNameUser"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/entryNameUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--Password -->
    <TextView
        android:id="@+id/txtPasswordUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/passwordUser"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNameUser" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout8"
        android:layout_width="204dp"
        android:layout_height="29dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/txtPasswordUser"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/entryPasswordUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"

            android:hint="" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--Genre -->
    <TextView
        android:id="@+id/txtGenreUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="20dp"
        android:text="@string/genreUser"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordUser" />

    <Switch
        android:id="@+id/switchGenreUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toEndOf="@+id/txtGenreUser"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout8"
        tools:ignore="UseSwitchCompatOrMaterialXml" />
    <Button
        android:id="@+id/btnCancelUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="36dp"
        android:text="@string/btnCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGenreUser" />

    <Button
        android:id="@+id/btnAcceptUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="36dp"
        android:text="@string/btnAccept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnCancelUser"
        app:layout_constraintTop_toBottomOf="@+id/txtGenreUser" />

    <!--


        -->

</androidx.constraintlayout.widget.ConstraintLayout>